--- a/manifest.json
+++ b/manifest.json
@@ -3,11 +3,12 @@
     "name": "Remote team map",
     "description": "",
     "version": "1.1",
-    "icons": {
-    "128": "128.png"
-    },
+    "browser_action" : {
+		"default_popup" : "index.html"
+	},
     "permissions": [
         "unlimitedStorage",
-        "notifications"
+        "notifications",
+        "geolocation"
     ]
 }
